Update to use npm package.

--- a/html/chatgptagent.html
+++ b/html/chatgptagent.html
@@ -8,33 +8,27 @@
 
 <div id="agentDiv" style="width:250px; height:200px;"></div>
 <p>
-<input id="input1" type="text" autofocus onkeypress="keypress()"><button onclick="submit()">Submit</button>
+<input id="input1" type="text" autofocus><button id="button1">Submit</button>
 <p>
 <div id="historyDiv">
 </div>
 
-<script>
+<script type="module">
+import CharacterApiClient from './node_modules/@mediasemantics/character-api-client/character-api-client.js';
+
 // Initialize your character in a div
 var character;
 document.addEventListener("DOMContentLoaded", function() {
-    character = CharApiClient.setupDiv("agentDiv", {
+    character = new CharacterApiClient("agentDiv", {
         width: 250,
         height: 200,
-        // TODO: Replace this with your own endpoint on your own server. 
-        endpoint: "http://localhost:3000/animate",
-        // Character API parameters. TODO: If your api works without authentication, e.g. if your page is accessible without a login, then it is wise 
-        // to *fix* or *limit* as many parameters as you can in your server code, including a background with a logo, if you can, 
-        // in order to minimize the attractiveness of your endpoint for scammers. (CORS helps with this, but it can still be defeated.)
         character: "SusanHead",
-        // Character version - get this from the character catalog
-        version: "3.0.1",
-        // Character idle pattern - get this from the character catalog
-        idleData: {"blink":["blink"],"normal":["blink","headidle1-3"]},
-        // Increment the 'cache' value if you make changes to the parameters you fix in your server.
-        // Even if you delete your server-side cache, your clients may have images in their client cache. Incrementing the
-        // cache number in the client is a simple way to ensure that neither client or server-cached images are accidentally used.
-        cache: 1
+       animateEndpoint: "http://localhost:3000/animate",
+       catalogEndpoint: "http://localhost:3000/catalog",
     });
+    
+    document.getElementById("input1").addEventListener("keypress", keypress);
+    document.getElementById("button1").addEventListener("click", submit);
 })
 
 // Create a userid using the current time and some random numbers
